@@ -2,6 +2,12 @@
 
 	* src/SDCCralloc.hpp,
 	  src/z80/ralloc2.cc:
+	  Full tree-decomposition-based spilllocation allocation.
+
+2011-09-05 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
+	* src/SDCCralloc.hpp,
+	  src/z80/ralloc2.cc:
 	  Preparations for full tree-decomposition-based spilllocation allocation.
 
 2011-09-05 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
